updated both notebooks

--- a/sagemaker.ipynb
+++ b/sagemaker.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: Title\n",
-    "**TODO**: Give a helpful introduction to what this notebook is for. Remember that comments, explanations and good documentation make your project informative and professional.\n",
+    "# Starbucks Rewards: Predicting Consumer Responses\n",
     "\n",
-    "**Note:** This notebook has a bunch of code and markdown cells with TODOs that you have to complete. These are meant to be helpful guidelines for you to finish your project while meeting the requirements in the project rubrics. Feel free to change the order of the TODO's and/or use more than one cell to complete all the tasks."
+    "The project is an experiment that determines how do we take this experimental data and discover what are the offers that excite people? So, it’s about discovering what is the most valuable offer there is, not just for the customers as a whole but at an individual personal level. \n",
+    "\n",
+    "Starbucks rewards mobile app customers are simulated with this simulated data. An offer could be an advertisement for a drink, a discount, or a buy one get one free deal. Some customers may not be sent offers during certain days or weeks and not all customers will receive the same offer. That is the challenge to solve using this dataset, who gets what offer? "
    ]
   },
   {
@@ -34,10 +35,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preparation\n",
-    "**TODO:** Run the cell below to download the data.\n",
+    "## Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset\n",
     "\n",
-    "The cell below creates a folder called `train_data`, downloads training data and arranges it in subfolders. Each of these subfolders contain images where the number of objects is equal to the name of the folder. For instance, all images in folder `1` has images with 1 object in them. Images are not divided into training, testing or validation sets. If you feel like the number of samples are not enough, you can always download more data (instructions for that can be found [here](https://registry.opendata.aws/amazon-bin-imagery/)). However, we are not acessing you on the accuracy of your final trained model, but how you create your machine learning engineering pipeline."
+    "portfolio.json\n",
+    "* id (string) - offer id\n",
+    "* offer_type (string) - a type of offer ie BOGO, discount, informational\n",
+    "* difficulty (int) - the minimum required to spend to complete an offer\n",
+    "* reward (int) - the reward is given for completing an offer\n",
+    "* duration (int) - time for the offer to be open, in days\n",
+    "* channels (list of strings)\n",
+    "\n",
+    "profile.json\n",
+    "* age (int) - age of the customer \n",
+    "* became_member_on (int) - date when customer created an app account\n",
+    "* gender (str) - gender of the customer (note some entries contain 'O' for other rather than M or F)\n",
+    "* id (str) - customer id\n",
+    "* income (float) - customer's income\n",
+    "\n",
+    "transcript.json\n",
+    "* event (str) - record description (ie transaction, offer received, offer viewed, etc.)\n",
+    "* person (str) - customer id\n",
+    "* time (int) - time in hours since the start of the test. The data begins at time t=0\n",
+    "* value - (dict of strings) - either an offer id or transaction amount depending on the record\n",
+    "\n"
    ]
   },
   {
@@ -46,35 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import json\n",
-    "import boto3\n",
-    "\n",
-    "def download_and_arrange_data():\n",
-    "    s3_client = boto3.client('s3')\n",
-    "\n",
-    "    with open('file_list.json', 'r') as f:\n",
-    "        d=json.load(f)\n",
-    "\n",
-    "    for k, v in d.items():\n",
-    "        print(f\"Downloading Images with {k} objects\")\n",
-    "        directory=os.path.join('train_data', k)\n",
-    "        if not os.path.exists(directory):\n",
-    "            os.makedirs(directory)\n",
-    "        for file_path in tqdm(v):\n",
-    "            file_name=os.path.basename(file_path).split('.')[0]+'.jpg'\n",
-    "            s3_client.download_file('aft-vbi-pds', os.path.join('bin-images', file_name),\n",
-    "                             os.path.join(directory, file_name))\n",
-    "\n",
-    "# download_and_arrange_data()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dataset\n",
-    "**TODO:** Explain what dataset you are using for this project. Give a small overview of the classes, class distributions etc that can help anyone not familiar with the dataset get a better understanding of it. You can find more information about the data [here](https://registry.opendata.aws/amazon-bin-imagery/)."
+    "#TODO: Give a small overview of the classes, class distributions etc."
    ]
   },
   {
@@ -100,8 +99,6 @@
    "metadata": {},
    "source": [
     "## Model Training\n",
-    "**TODO:** This is the part where you can train a model. The type or architecture of the model you use is not important. \n",
-    "\n",
     "**Note:** You will need to use the `train.py` script to train your model."
    ]
   },
@@ -137,18 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standout Suggestions\n",
-    "You do not need to perform the tasks below to finish your project. However, you can attempt these tasks to turn your project into a more advanced portfolio piece."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hyperparameter Tuning\n",
-    "**TODO:** Here you can perform hyperparameter tuning to increase the performance of your model. You are encouraged to \n",
-    "- tune as many hyperparameters as you can to get the best performance from your model\n",
-    "- explain why you chose to tune those particular hyperparameters and the ranges.\n"
+    "### Hyperparameter Tuning"
    ]
   },
   {
@@ -191,8 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Deploying and Querying\n",
-    "**TODO:** Can you deploy your model to an endpoint and then query that endpoint to get a result?"
+    "### Model Deploying and Querying"
    ]
   },
   {
