removed capstone notebook updated sagemaker file

--- a/sagemaker.ipynb
+++ b/sagemaker.ipynb
@@ -73,6 +73,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "portfolio = pd.read_json('data/portfolio.json', orient='records', lines=True)\n",
+    "profile = pd.read_json('data/profile.json', orient='records', lines=True)\n",
+    "transcript = pd.read_json('data/transcript.json', orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offers = transcript[transcript['event']==\"offer received\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "offer_count = defaultdict(int)\n",
+    "for offer in offers.value:\n",
+    "    val = offer['offer id']\n",
+    "    if val in offer_count:\n",
+    "        offer_count[val]+=1\n",
+    "    else:\n",
+    "        offer_count[val] = 1\n",
+    "\n",
+    "print(offer_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check data balanced\n",
+    "data = pd.DataFrame.from_dict(offer_count, orient='index')\n",
+    "bar_plot = data.plot.bar(title=\"Number of occurrences of each offer\")\n",
+    "bar_plot.set_xlabel(\"offer id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#TODO: Give a small overview of the classes, class distributions etc."
    ]
   },
