--- a/sagemaker.ipynb
+++ b/sagemaker.ipynb
@@ -687,6 +687,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
