uploaded data to s3

--- a/sagemaker.ipynb
+++ b/sagemaker.ipynb
@@ -24,14 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Import any packages that you might need\n",
     "from collections import defaultdict\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sagemaker\n",
+    "import boto3"
    ]
   },
   {
@@ -399,6 +400,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note: We only consider customers who received offers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -508,6 +516,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>event</th>\n",
+       "      <th>time</th>\n",
+       "      <th>offer id</th>\n",
+       "      <th>offer_id</th>\n",
+       "      <th>reward</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12658</th>\n",
+       "      <td>9fa9ae8f57894cc9a3b8a9bbe0fc1b2f</td>\n",
+       "      <td>offer completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2906b810c7d4411798c6938adc9daaa5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12672</th>\n",
+       "      <td>fe97aa22dd3e48c8b143116a8403dd52</td>\n",
+       "      <td>offer completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fafdcd668e3743c1bb461111dcafc2a4</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12679</th>\n",
+       "      <td>629fc02d56414d91bca360decdfa9288</td>\n",
+       "      <td>offer completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9b98b8c7a33c4b65b9aebfe6a799e6d9</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12692</th>\n",
+       "      <td>676506bad68e4161b9bbaffeb039626b</td>\n",
+       "      <td>offer completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ae264e3637204a6fb9bb56bc8210ddfd</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12697</th>\n",
+       "      <td>8f7dd3b2afe14c078eb4f6e6fe4ba97d</td>\n",
+       "      <td>offer completed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4d5c57ea9a6940dd891ad53e9dbe8da0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id            event  time offer id  \\\n",
+       "12658  9fa9ae8f57894cc9a3b8a9bbe0fc1b2f  offer completed     0      NaN   \n",
+       "12672  fe97aa22dd3e48c8b143116a8403dd52  offer completed     0      NaN   \n",
+       "12679  629fc02d56414d91bca360decdfa9288  offer completed     0      NaN   \n",
+       "12692  676506bad68e4161b9bbaffeb039626b  offer completed     0      NaN   \n",
+       "12697  8f7dd3b2afe14c078eb4f6e6fe4ba97d  offer completed     0      NaN   \n",
+       "\n",
+       "                               offer_id  reward  \n",
+       "12658  2906b810c7d4411798c6938adc9daaa5     2.0  \n",
+       "12672  fafdcd668e3743c1bb461111dcafc2a4     2.0  \n",
+       "12679  9b98b8c7a33c4b65b9aebfe6a799e6d9     5.0  \n",
+       "12692  ae264e3637204a6fb9bb56bc8210ddfd    10.0  \n",
+       "12697  4d5c57ea9a6940dd891ad53e9dbe8da0    10.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_transcript.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove duplicate or irrelevant observations and fix columns in the wrong format"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -612,16 +736,16 @@
     }
    ],
    "source": [
+    "new_transcript = new_transcript.dropna(subset = [\"offer_id\"]).rename(columns={\"person\": \"id\"})\n",
+    "data = pd.merge(new_transcript, profile, on=\"id\")\n",
+    "data['became_member_on'] = pd.to_datetime(data['became_member_on'],format='%Y%m%d')\n",
+    "\n",
     "to_drop = ['offer id',\n",
     "           'event',\n",
     "           'id',\n",
     "           'reward']\n",
-    "\n",
-    "new_transcript = new_transcript.dropna(subset = [\"offer_id\"]).rename(columns={\"person\": \"id\"})\n",
-    "data = pd.merge(new_transcript, profile, on=\"id\")\n",
-    "data['became_member_on'] = pd.to_datetime(data['became_member_on'],format='%Y%m%d')\n",
+    "           \n",
     "data.drop(to_drop, inplace=True, axis=1)\n",
-    "\n",
     "data.head()"
    ]
   },
@@ -629,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, we will handle missing values in the <strong>income</strong> column in the `data` variable by replacing with mean. \n",
+    "We will handle missing values in the <strong>income</strong> column in `data` by replacing with mean. \n",
     "\n",
     "Pros:\n",
     "This is a better approach when the data size is small\n",
@@ -696,11 +820,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Bucket: my-project-bucket-123\n",
+      "AWS Region: us-east-1\n",
+      "RoleArn: arn:aws:iam::657240468511:role/service-role/AmazonSageMaker-ExecutionRole-20211225T133929\n"
+     ]
+    }
+   ],
+   "source": [
+    "sagemaker_session = sagemaker.Session()\n",
+    "\n",
+    "bucket = \"my-project-bucket-123\"\n",
+    "region =\"us-east-1\" \n",
+    "role = \"arn:aws:iam::657240468511:role/service-role/AmazonSageMaker-ExecutionRole-20211225T133929\"\n",
+    "\n",
+    "print(\"Default Bucket: {}\".format(bucket))\n",
+    "print(\"AWS Region: {}\".format(region))\n",
+    "print(\"RoleArn: {}\".format(role))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Upload the data to AWS S3"
+    "s3 = boto3.resource('s3')\n",
+    "s3.meta.client.upload_file('data.csv', bucket, 'data.csv')"
    ]
   },
   {
