--- a/sagemaker.ipynb
+++ b/sagemaker.ipynb
@@ -291,6 +291,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We will handle missing values in the <strong>genders</strong> column in the `profile.json` data set by assigning an unique category. \n",
     "\n",
     "pros:\n",
@@ -854,6 +861,20 @@
     "s3 = boto3.resource('s3')\n",
     "s3.meta.client.upload_file('data.csv', bucket, 'data.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
