--- a/sagemaker.ipynb
+++ b/sagemaker.ipynb
@@ -1434,7 +1434,7 @@
     "estimator = XGBoost(entry_point = \"train.py\", \n",
     "                    framework_version='1.2-2',\n",
     "                    hyperparameters=hyperparameters,\n",
-    "                    role=sagemaker.get_execution_role(),\n",
+    "                    role=role,\n",
     "                    instance_count=1,\n",
     "                    instance_type='ml.m5.2xlarge',\n",
     "                    output_path=output_path)"
@@ -1449,8 +1449,8 @@
     "# TODO: Fit your estimator\n",
     "\n",
     "estimator.fit({\n",
-    "'train': input_data+'/train',     \n",
-    "'test': input_data+'/test',      \n",
+    "'train': train,     \n",
+    "'test': test,      \n",
     "}, wait=True)"
    ]
   },
