chore: update problem statement

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -39,13 +39,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To predict if someone will reply to an offer, transaction data and demographic information must be combined. GitHub\n",
-    "customers will also have access to the data and in the Data Sets section of the proposal, it is clearly stated that the repository and data sets are available.\n",
-    "\n",
-    "Using Gradient Boosting, a supervised learning method, we will analyze the attributes of customers to create customer classifications.\n",
-    "\n",
-    "This is a multi-class classification problem so the key metric we will use is f1-score. The simulating dataset only has one product, while Starbucks offers dozens of products. Therefore, this data set is a simplified version of the real Starbucks app.\n",
-    "\n"
+    "Predict if someone will reply to an offer. Transaction data and demographic information must be combined and gitHub\n",
+    "customers will also have access to the data. We will analyze the attributes of customers to create customer classifications. This is a multi-class classification problem so the key metric we will use is f1-score. The simulating dataset only has one product, while Starbucks offers dozens of products. Therefore, this data set is a simplified version of the real Starbucks app."
    ]
   },
   {
