--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -73,14 +73,6 @@
    "source": [
     "### Dataset details\n",
     "\n",
-    "portfolio.json\n",
-    "* id (string) - offer id\n",
-    "* offer_type (string) - a type of offer ie BOGO, discount, informational\n",
-    "* difficulty (int) - the minimum required to spend to complete an offer\n",
-    "* reward (int) - the reward is given for completing an offer\n",
-    "* duration (int) - time for the offer to be open, in days\n",
-    "* channels (list of strings)\n",
-    "\n",
     "profile.json\n",
     "* age (int) - age of the customer \n",
     "* became_member_on (int) - date when customer created an app account\n",
@@ -93,7 +85,14 @@
     "* person (str) - customer id\n",
     "* time (int) - time in hours since the start of the test. The data begins at time t=0\n",
     "* value - (dict of strings) - either an offer id or transaction amount depending on the record\n",
-    "\n"
+    "\n",
+    "portfolio.json\n",
+    "* id (string) - offer id\n",
+    "* offer_type (string) - a type of offer ie BOGO, discount, informational\n",
+    "* difficulty (int) - the minimum required to spend to complete an offer\n",
+    "* reward (int) - the reward is given for completing an offer\n",
+    "* duration (int) - time for the offer to be open, in days\n",
+    "* channels (list of strings)"
    ]
   },
   {
@@ -105,6 +104,14 @@
     "portfolio = pd.read_json('data/portfolio.json', orient='records', lines=True)\n",
     "profile = pd.read_json('data/profile.json', orient='records', lines=True)\n",
     "transcript = pd.read_json('data/transcript.json', orient='records', lines=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Profile Analysis"
    ]
   },
   {
@@ -323,6 +330,14 @@
     "There are 17000 records where the average age is 63 years old and the average income is $65000 and there are 2175 missing data points from income and gender. We will need to consider what we do with these values later one. We can safely ignore the id as these don't mean anything. As for became_member_on we can confirm that most customers became a member in 2017 and 2018.\n",
     "\n",
     "With M corresponding to male, we can see that males accounts for the majority of the customers. **This may be a problem for our model, but if our accuracy is too low, then we can always normalize the presence of each area in the dataset to get predictions that aren’t skewed towards male customers**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transcript Analysis"
    ]
   },
   {
@@ -581,6 +596,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Portfolio Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reward</th>\n",
+       "      <th>channels</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>offer_type</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>[email, mobile, social]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>ae264e3637204a6fb9bb56bc8210ddfd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>[web, email, mobile, social]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>4d5c57ea9a6940dd891ad53e9dbe8da0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[web, email, mobile]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>informational</td>\n",
+       "      <td>3f207df678b143eea3cee63160fa8bed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[web, email, mobile]</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>9b98b8c7a33c4b65b9aebfe6a799e6d9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[web, email]</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>discount</td>\n",
+       "      <td>0b1e1539f2cc45b7b9fa7c272da2e1d7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   reward                      channels  difficulty  duration     offer_type  \\\n",
+       "0      10       [email, mobile, social]          10         7           bogo   \n",
+       "1      10  [web, email, mobile, social]          10         5           bogo   \n",
+       "2       0          [web, email, mobile]           0         4  informational   \n",
+       "3       5          [web, email, mobile]           5         7           bogo   \n",
+       "4       5                  [web, email]          20        10       discount   \n",
+       "\n",
+       "                                 id  \n",
+       "0  ae264e3637204a6fb9bb56bc8210ddfd  \n",
+       "1  4d5c57ea9a6940dd891ad53e9dbe8da0  \n",
+       "2  3f207df678b143eea3cee63160fa8bed  \n",
+       "3  9b98b8c7a33c4b65b9aebfe6a799e6d9  \n",
+       "4  0b1e1539f2cc45b7b9fa7c272da2e1d7  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5     3\n",
+       "10    2\n",
+       "2     2\n",
+       "0     2\n",
+       "3     1\n",
+       "Name: reward, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio['reward'].value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Missing Values"
    ]
   },
@@ -698,33 +855,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will handle missing values in the <strong>genders</strong> column in the `profile.json` data set by deleting rows\n",
-    "\n",
-    "Pros:\n",
-    "Complete removal of data with missing values results in robust and highly accurate model\n",
-    "Deleting a particular row or a column with no specific information is better, since it does not have a high weightage\n",
-    "\n",
-    "Cons:\n",
-    "Loss of information and data\n",
-    "Works poorly if the percentage of missing values is high (say 30%), compared to the whole dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profile.dropna(inplace=True)\n",
-    "profile.head()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Note: We only consider customers who received offers."
+    "Note: We will only consider customers who received offers. Customers who did not recieve an offer could not have viewed or responed to offfer so they offer no valid information to the model."
    ]
   },
   {
@@ -796,24 +927,6 @@
     "           \n",
     "data.drop(to_drop, inplace=True, axis=1)\n",
     "print(data)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will handle missing values in the <strong>income</strong> column in `data` by deleting rows. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.dropna(inplace=True)\n",
-    "data.info()"
    ]
   },
   {
