--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -679,6 +679,51 @@
        "      <td>discount</td>\n",
        "      <td>0b1e1539f2cc45b7b9fa7c272da2e1d7</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[web, email, mobile, social]</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>discount</td>\n",
+       "      <td>2298d6c36e964ae4a3e7e9706d1fb8c2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[web, email, mobile, social]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>discount</td>\n",
+       "      <td>fafdcd668e3743c1bb461111dcafc2a4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[email, mobile, social]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>informational</td>\n",
+       "      <td>5a8bc65990b245e5a138643cd4eb9837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[web, email, mobile, social]</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>bogo</td>\n",
+       "      <td>f19421c1d4aa40978ebb69ca19b0e20d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[web, email, mobile]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>discount</td>\n",
+       "      <td>2906b810c7d4411798c6938adc9daaa5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -690,22 +735,32 @@
        "2       0          [web, email, mobile]           0         4  informational   \n",
        "3       5          [web, email, mobile]           5         7           bogo   \n",
        "4       5                  [web, email]          20        10       discount   \n",
+       "5       3  [web, email, mobile, social]           7         7       discount   \n",
+       "6       2  [web, email, mobile, social]          10        10       discount   \n",
+       "7       0       [email, mobile, social]           0         3  informational   \n",
+       "8       5  [web, email, mobile, social]           5         5           bogo   \n",
+       "9       2          [web, email, mobile]          10         7       discount   \n",
        "\n",
        "                                 id  \n",
        "0  ae264e3637204a6fb9bb56bc8210ddfd  \n",
        "1  4d5c57ea9a6940dd891ad53e9dbe8da0  \n",
        "2  3f207df678b143eea3cee63160fa8bed  \n",
        "3  9b98b8c7a33c4b65b9aebfe6a799e6d9  \n",
-       "4  0b1e1539f2cc45b7b9fa7c272da2e1d7  "
+       "4  0b1e1539f2cc45b7b9fa7c272da2e1d7  \n",
+       "5  2298d6c36e964ae4a3e7e9706d1fb8c2  \n",
+       "6  fafdcd668e3743c1bb461111dcafc2a4  \n",
+       "7  5a8bc65990b245e5a138643cd4eb9837  \n",
+       "8  f19421c1d4aa40978ebb69ca19b0e20d  \n",
+       "9  2906b810c7d4411798c6938adc9daaa5  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "portfolio.head()"
+    "portfolio.head(10)"
    ]
   },
   {
@@ -731,6 +786,14 @@
    ],
    "source": [
     "portfolio['reward'].value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that there are 8 rows with rewards but 2 that are just informational. So even if an offer was completed there would be no reward and discounts gives rewards with values 2,3, and 5 and have multiple diffuculties. We will not consider informational offers as they offer no rewards."
    ]
   },
   {
