chore: update cells

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -370,6 +370,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -415,19 +423,12 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Set target to be offer_id"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set target to be offer_id\n",
     "data['target'] = data['offer_id']\n",
     "data.drop('offer_id', inplace=True, axis=1)\n",
     "data.head()"
@@ -440,7 +441,6 @@
    "outputs": [],
    "source": [
     "# Convert object type to avoid error\n",
-    "\n",
     "lbl = preprocessing.LabelEncoder()\n",
     "data['gender'] = lbl.fit_transform(data['gender'].astype(str))\n",
     "data['target'] = lbl.fit_transform(data['target'].astype(str))\n",
@@ -462,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class distributions of offers completed (Exploratory Visualization)"
+    "### Class distributions of offers completed"
    ]
   },
   {
